--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -1,12 +1,3 @@
-body {
-	width: 100%;
-	height: 100%;
-}
-
-html {
-	width: 100%;
-	height: 100%;
-}
 
 .name-button {
 	font-family: fantasy;
@@ -29,14 +20,12 @@ p {
 .extra-jumbotron{
 	font-family: cursive;
 	font-size: xx-large;
-
-}
-
-.extra-jumbotron {
 	background-color: deeppink;
-	background-image: url('../image/intro.jpg');
-	background-size: 100%;
+	background: url('../image/intro.jpg') no-repeat center;
+	background-size: cover;
 	color: white;
+	height: 100vh;
+	padding: 80px 0;
 }
 
 .portfolio-section {
@@ -47,19 +36,17 @@ p {
 	background: #fff;
 }
 
+#about .container-fluid .col-lg-3 {
+	padding-right: 0;
+}
+
 .contact-section {
 	height: 100%;
 	padding-top: 80px;
 	padding-bottom: 500px;
 	text-align: center;
 	background: #eee;
-
 }
-.extra-jumbotron{
-	padding-bottom:80px;
-
-}
-
 @media(min-width:767px) {
 	.navbar {
 		padding:0;
